--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Prediction</title>
 </head>
 <body>
-    <h1>Delivery Time Prediction</h1>
+    <div class="header">
+        <h1>Delivery Time Prediction</h1>
+        <a href="{{ url_for('about') }}">About</a>
+    </div>
+    
     <div class="container">
     <form action="{{ url_for('index') }}" method="post">
         <label for="feature1">Protocol</label>
